--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
         freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
-
     }
+
 }
 
 dependencies {
@@ -56,10 +56,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.3.0"
     implementation 'com.orhanobut:logger:2.2.0'
 
-    def room_version = "2.2.5"
-
-
-
+    def room_version = "2.3.0-alpha03"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
